# TheForum

./: .env.example  README.md
.github/workflows/: enforce-staging-to-main.yml
apps/database/: .env.example  package.json
apps/database/src/: seed.ts
apps/database/src/schema/: index.ts
apps/web/: .env.local.example
apps/web/src/actions/: events.ts  orgs.ts  users.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/explore/: explore-client.tsx
apps/web/src/app/(app)/profile/: page.tsx
apps/web/src/components/events/: event-card.tsx
apps/web/src/lib/: date-format.ts
backends/fastapi/: .env.example  pyproject.toml
backends/fastapi/app/: main.py
